@startuml
skinparam classAttributeIconSize 0

class RegisterEmployeeUI
{
}

class RegisterEmployeeController
{
    +Employee newEmployee(nif, name, email, password)
    +validateEmployee(Employee employee)
}

class Employee
{
    Integer nif;
    String name;
    String email;
    String password;
    +validateEmployee(Employee employee)
}

RegisterEmployeeUI ..> RegisterEmployeeController
RegisterEmployeeController ..> Employee
@enduml
